--- a/src/apps/chronix/index.html
+++ b/src/apps/chronix/index.html
@@ -2,11 +2,12 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8" />
+        <link rel="icon" type="image/x-icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Chronix - Mesures de temps | Graduo</title>
-        <meta 
-            name="description" 
-            content="Visualisez les durées et leurs fractions sur une ligne graduée interactive."
+        <meta
+            name="description"
+            content="Visualisez et manipulez les durées et leurs fractions sur une ligne graduée interactive. Un outil pédagogique pour comprendre et apprendre les mesures de temps."
         />
     </head>
     <body>
